Bug 241709 - Konsole behaviour with root sessions (successor of 203621)
Summary: Konsole behaviour with root sessions (successor of 203621)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-14 10:09 UTC by Harald Nikolisin
Modified: 2011-10-03 04:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Nikolisin 2010-06-14 10:09:26 UTC
Version:           2.4.2 (using KDE 4.4.3) 
OS:                Linux

The bad behaviour of the closed bug 203621 is not fixed (though improved)

1. While a root session is opened (see #31 of bug 203621) and the whole konsole program will be closed, the konsole process is still active for a specific period of time. Every attempt to restart the program in that time will cause a defunct konsole process. Hardly acceptable...

2. If you immediately logout after closing a konsole program with a root session the situation is worse: When relogin to KDE a new konsole session starts automatically (with default profile) which closes also automatically after a specific period of time. Not acceptable...

Reproducible: Always

Steps to Reproduce:
short: open konsole with at least one root session

long: see comment #31 of bug 203621



often tested with KDE 4.4.3
Comment 1 Jekyll Wu 2011-10-03 04:54:01 UTC
Git commit e3a09c9c4d7a35d458440e28501098f3ac13b684 by Jekyll Wu.
Committed on 03/10/2011 at 05:01.
Pushed by jekyllwu into branch 'master'.

Close session reliably when the session process doesn't die with SIGHUP.

BUG:241709
BUG:251566
CCBUG:254600
FIXED-IN: 4.8
REVIEW:102239

M  +1    -1    src/MainWindow.cpp
M  +41   -18   src/Session.cpp
M  +20   -5    src/Session.h
M  +41   -3    src/SessionController.cpp
M  +8    -2    src/SessionController.h
M  +2    -2    src/ViewManager.cpp

http://commits.kde.org/konsole/e3a09c9c4d7a35d458440e28501098f3ac13b684