Close session reliably when the session process doesn't die with SIGHUP.

BUG:241709
BUG:251566
CCBUG:254600
FIXED-IN: 4.8
REVIEW:102239